changed css to explicitly set width and height of parent. finally got rid of the issue where sometimes they would render offscreen

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: Helvetica;
   text-rendering: geometricPrecision;
 }
@@ -24,6 +25,8 @@ a:visited {
   position: fixed;
   z-index: 2;
   pointer-events: none;
+  width: 100vw;
+  height: 100vh;
 }
 
 .child {
